# portfolio

./: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js
.bmad-core/: install-manifest.yaml
.github/workflows/: gh-pages.yml  update-oss-contributions.yml
assets/: tailwind.css
assets/styling/: main.css
data/: oss-contributions.json  pinned-projects.json  projects.json  recent-projects.json  work-experience.json
docs/: ai-prompts.md  front-end-spec.md
docs/prompts/: 00-navbar.md  01-hero-section.md  02-projects-section.md  03-skills-section.md  04-contact-section.md  05-complete-layout.md  06-footer.md  07-hero-spacing-fix.md  08-section-order-optimization.md  09-color-scheme-review.md  README.md
scripts/fetch-oss-contributions/: Cargo.toml
scripts/fetch-oss-contributions/src/: main.rs
src/: main.rs
src/components/: contact.rs  footer.rs  hero.rs  mod.rs  navbar.rs  oss_contributions.rs  project_card.rs  projects.rs  recent_projects.rs  skills.rs  work_experience.rs
src/views/: home.rs  mod.rs
