[package]
name = "fetch-oss-contributions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-oss-contributions"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
